# Light-Rail

./: README.md  WRITEUP.md
firmware/: common.h  game.h  main.cpp  platform.h  platformio.ini  track.h  train.h
firmware/cpp/: common.h  game.h  main.cpp  platform.h  platformio.ini  tone.h  track.h  train.h
firmware/rust/: Cargo.toml
firmware/rust/.cargo/: config.toml
firmware/rust/src/: as1115.rs  cargo.rs  common.rs  game.rs  game_settings.rs  game_state.rs  input.rs  is31fl3731.rs  location.rs  main.rs  notone.rs  panic.rs  platform.rs  random.rs  switch.rs  tone.rs  track.rs  train.rs
firmware/rust/src/modes/: freeplay.rs  juggle.rs  menu.rs  mod.rs  settings.rs  snake.rs  time.rs
hardware/: Light_Rail_BOM.xlsx  pcbway_quote.xls  pcbway_quote_edit.xls
hardware/documents/: Light_Rail_BOM.xlsx  pcbway_quote.xls  pcbway_quote_edit.xls
hardware/kicad8.0/: Light_Rail.kicad_sym  fp-lib-table  light_rail.kicad_dru  light_rail.kicad_pcb  light_rail.kicad_pro  light_rail.kicad_sch  sym-lib-table
hardware/kicad8.0/Light_Rail.pretty/: EchoEye.kicad_mod  GitHubQR.kicad_mod  LED_0805_NoSilkscreen.kicad_mod  LED_0805_TrainTrack.kicad_mod  LED_0805_TrainTrackBend1.kicad_mod  LED_0805_TrainTrackBend2.kicad_mod  LED_0805_TrainTrackBendStart1.kicad_mod  LED_0805_TrainTrackBendStart2.kicad_mod  LED_0805_TrainTrackBendStart3.kicad_mod  LED_0805_TrainTrackBendStart4.kicad_mod  LED_0805_TrainTrackEmpty.kicad_mod  LED_0805_TrainTrackInnerBend1.kicad_mod  LED_0805_TrainTrackInnerBend2.kicad_mod  LED_0805_TrainTrackStart.kicad_mod  TrainDrawing.kicad_mod
