[package]
name = "light-rail"
version = "0.1.0"
authors = ["Nick Brown <nworbn@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "light-rail"
test = false
bench = false

[dependencies]
avr-progmem = "0.4.0"
avr-device = { version = "0.7.0", features = ["rt"] }
embedded-hal = "1.0"
embedded-hal-bus = "0.2.0"
heapless = "0.8.0"
nb = "1.1.0"
panic-halt = "1.0.0"
random-trait = "0.1"
ufmt = "0.2.0"

[dependencies.as1115]
git = "https://github.com/nonik0/as1115"
rev = "1a16eaa54253c2c7507fb8790ad490ed39d47195"

[dependencies.is31fl3731]
git = "https://github.com/nonik0/is31fl3731"
rev = "61cb477a398b53b0cbe6078fa285f4f008496da2"

[dependencies.atmega-hal]
git = "https://github.com/rahix/avr-hal"
rev = "d02ab21d17f06baadb5c0f2abf7cf3ea9c0a35b3"
features = ["atmega32u4"]

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
[build-dependencies.proc-macro2]
version = "=1.0.79"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
