[package]
name = "light-rail"
version = "0.1.0"
authors = ["Nick Brown <nick@altonimb.us>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "light-rail"
test = false
bench = false

[features]
atmega32u4 = ["atmega-hal/atmega32u4"]
atmega328p = ["atmega-hal/atmega328p"]
panic_to_digits = []
test  = []

[dependencies]
avr-progmem = "0.4.0"
avr-device = { version = "0.7.0", features = ["rt"] }
embedded-hal = "1.0"
embedded-hal-bus = "0.2.0"
enum_dispatch = "0.3.13"
heapless = "0.8.0"
nb = "1.1.0"
panic-halt = "1.0.0"
ufmt = "0.2.0"

[dependencies.as1115]
#git = "https://github.com/nonik0/as1115"
#rev = "1a16eaa54253c2c7507fb8790ad490ed39d47195"
path = "G:\\rust\\drivers\\as1115"

[dependencies.is31fl3731]
git = "https://github.com/nonik0/is31fl3731"
rev = "61cb477a398b53b0cbe6078fa285f4f008496da2"

[dependencies.atmega-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"

[dependencies.random-trait]
git = "https://github.com/nonik0/random-rs"
rev = "306d59aaad4565e8b159f8f34cb25fe32217c83e"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"
# for panic
overflow-checks = false 
debug-assertions = false

[profile.release]
panic = "abort"
codegen-units = 1
#debug = true
lto = true
opt-level = "s"
# for panic
overflow-checks = false 
debug-assertions = false